syntax = "proto3";

package br.edu.iftm.tspi.sd;

message Cliente {
  int64 id = 1;    
  string nome = 2; 
}

message ClienteRequest {
  int64 id = 1;
}

message ClientePorNomeRequest {
  string nome = 1;  
}

message ClienteResponse {
  Cliente cliente = 1;
}

message ListaClientesResponse {
  repeated Cliente clientes = 1;
}

service ClienteService {
  rpc BuscarClientePorId (ClienteRequest) returns (ClienteResponse);
  rpc BuscarClientesPorNome (ClientePorNomeRequest) returns (ListaClientesResponse);
}